--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -27,7 +27,7 @@
         - if user != current_user
           = link_to image_tag("remove.svg"), '#',
             data: { last_teammember_teams_link: last_teammember_teams_path(user_id: user.id),
-                    username: user.username},
+                    user_id: user.id},
             class: 'delete_user_link'
 
 - if User.locked.count != 0
@@ -45,7 +45,7 @@
           = link_to image_tag("unlock.svg"),  unlock_admin_user_path(user.id), title: t('.unlock')
 
 %div{id: "last_teammember_teams"}
-  = render partial: 'soloteams'
+  = render partial: 'last_teammember_teams'
 
 
 
