--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -14,8 +14,7 @@
           - if current_user.admin?
             %li.dropdown
               <a href="#" data-target="#" class="dropdown-toggle" data-toggle="dropdown", role="button">
-              Admin
-              %b.caret
+              Admin <b class="caret"></b></a>
               %ul.dropdown-menu
                 %li= nav_link t(:ldap_settings), admin_settings_path
                 %li= nav_link t(:recrypt_requests), admin_recryptrequests_path
