--- a/app/views/accounts/_edit_form.html.haml
+++ b/app/views/accounts/_edit_form.html.haml
@@ -19,3 +19,11 @@
     %span#unencrypted
       (#{I18n.t('unencrypted_field_caption')})
     = f.text_area :description, class: 'form-control'
+  .form-group
+    %h1= 'Move Account'
+    %br/
+    = f.label :team
+    .move_team
+    = f.label :group_id
+    .move_group
+  = f.submit @submit_button_text, class: 'btn btn-primary'
