--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -12,3 +12,4 @@
     = f.label :description
     = f.text_area :description, class: 'form-control'
   = f.submit @submit_button_text, class: 'btn btn-primary'
+  =link_to "Cancel", team_groups_path(team_id: params[:team_id] ), {:class=>"btn btn-primary"}
