--- a/app/views/teams/_form.html.haml
+++ b/app/views/teams/_form.html.haml
@@ -17,3 +17,4 @@
     = f.label :description
     = f.text_area :description, class: 'form-control'
   = f.submit @submit_button_text, class: 'btn btn-primary'
+  =link_to "Cancel", teams_path, {:class=>"btn btn-primary"}
