--- a/app/views/logins/login.html.haml
+++ b/app/views/logins/login.html.haml
@@ -6,7 +6,7 @@
 .login-form
   = form_tag({action: 'authenticate'}, {class: 'login'}) do
     %fieldset
-      = image_tag("logo_cryptopus.svg", class: 'logo')
+      = image_tag("cryptopussy.svg", class: 'logo')
       .form-group
         = text_field_tag :username, params[:username], id: 'username', placeholder: t(:username), class: 'form-control'
         = password_field_tag :password, nil, id: 'password', placeholder: t(:password), class: 'form-control'
