add cancel buttons to user and tasks #19741

--- a/app/views/admin/maintenance_tasks/prepare.html.haml
+++ b/app/views/admin/maintenance_tasks/prepare.html.haml
@@ -9,3 +9,4 @@
     = create_maintenance_task_field(p)
 
   = submit_tag "execute", class: 'btn btn-primary'
+  =link_to "Cancel", admin_maintenance_tasks_path, {:class=>"btn btn-primary"}
