--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -19,3 +19,4 @@
     = f.label :surname
     = f.text_field :surname, class: 'form-control'
   = f.submit @submit_button_text, class: 'btn btn-primary'
+  =link_to "Cancel", admin_users_path, {:class=>"btn btn-primary"}
