prevented that a user can go a page back after logout

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -22,7 +22,7 @@
                 %li= nav_link t(:maintenance_tasks), admin_maintenance_tasks_path
           - if current_user.auth_db?
             = nav_link t(:change_password), show_update_password_login_path
-        %ul.nav.navbar-nav.navbar-right
+        %ul.nav.navbar-nav.navbar-right.logout
           = nav_link('Logout', logout_login_path)
   - unless @breadcrumbs.nil?
     .bread-container
