--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -10,11 +10,14 @@
 .container
   %ul.nav.nav-tabs
     %li#accounts.tab.active
-      %a{"data-toggle" => "tab", href: "#accounts-result"} Accounts
+      %a{"data-toggle" => "tab", href: "#accounts-result"}
+        = t('accounts.title')
     %li#groups.tab
-      %a{"data-toggle" => "tab", href: "#groups-result"} Groups
+      %a{"data-toggle" => "tab", href: "#groups-result"}
+        = t('groups.title')
     %li#teams.tab
-      %a{"data-toggle" => "tab", href: "#teams-result"} Teams
+      %a{"data-toggle" => "tab", href: "#teams-result"}
+        = t('teams.title')
   .tab-content
     #accounts-result.tab-pane.fade.in.active
       %ul.search-result.result-list.accounts
