--- a/app/assets/javascripts/templates/search/accounts_result_entries.hbs.erb
+++ b/app/assets/javascripts/templates/search/accounts_result_entries.hbs.erb
@@ -4,38 +4,13 @@ See the COPYING file at the top-level directory or at
 https://github.com/puzzle/cryptopus. }}
 
 {{#each .}}
-  <li class="result">
-    <div class="result-description">
-      <h1 class="result-title">
-        <a href="/teams/{{team_id}}/groups/{{group_id}}/accounts/{{id}}">{{accountname}}</a><br>
-      </h1
-      <br>
-      <span>
-        <a href="/teams/{{team_id}}/groups">{{team}}</a>
-        >
-        <a href="/teams/{{team_id}}/groups/{{group_id}}/accounts">{{group}}</a>
-      </span>
-    </div>
-    <br>
-    <div class="result-action">
-      <div class="result-username select-click">
-        <input id="username_{{id}}" type="text" value="{{cleartext_username}}" class="form-control" readonly>
-        <button class="btn clip_button" data-clipboard-target="#username_{{id}}" title="Click to copy">
-          <svg class="icon-clippy">
-            <use xlink:href="#icon-clippy"></use>
-          </svg>
-        </button>
+  <div class"result-entry">
+    <li class="result-small account-entry"
+      data-account-path="/api/teams/{{team_id}}/groups/{{group_id}}/accounts/{{id}}">
+      <div class="result-description">
+        <%= image_tag("key.svg", class:"result-type-icon", alt:"Account" ) %>
+        <h4 class="result-title-small account-link">{{accountname}}</h4>
       </div>
-
-      <a href="#" class="password-show">Show password</a>
-      <div class="result-password select-click">
-        <input id="password_{{id}}"type="text" class="password-hidden form-control" value="{{cleartext_password}}" readonly>
-        <button class="btn clip_button" data-clipboard-target="#password_{{id}}" title="Click to copy">
-          <svg class="icon-clippy">
-            <use xlink:href="#icon-clippy"></use>
-          </svg>
-        </button>
-      </div>
-    </div>
-  </li>
+    </li>
+  </div>
 {{/each}}
