Revert "fixed deletion of user and wrote some capybara tests"
This reverts commit e31300fda8c533b8e875351c518c48fdaa35afb8.

--- a/app/assets/javascripts/templates/last_teammember_teams.hbs.erb
+++ b/app/assets/javascripts/templates/last_teammember_teams.hbs.erb
@@ -19,7 +19,7 @@ https://github.com/puzzle/cryptopus.
       <td><div style='visibility:hidden' id='last_teammember_team_id'>{{id}}</div></td>
       <td class='action_icon'>
         <a data-last-team-id={{id}} id='delete_last_teammember_team_link' href='#'>
-          <%= image_tag("remove.svg", class:"result-type-icon", alt:"Remove" ) %>
+          <img src='/assets/remove.svg' alt='Remove'>
         </a>
       </td>
     </tr>
