#24334 show password quality with smiley

--- a/app/assets/stylesheets/custom.scss.less
+++ b/app/assets/stylesheets/custom.scss.less
@@ -69,6 +69,15 @@ body {
   display: inline;
 }
 
+.strength{
+  padding-top: 20px;
+}
+
+#strength_status{
+  padding-top: 5px;
+  padding-left: 1%;
+}
+
 /*Footer*/
 
 .footer {
