--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -19,15 +19,23 @@
   %a.password-link{href: "#"}= t '.show_password'
   .result-password.select-click
     %input#cleartext_password.password-hidden.form-control{readonly: "readonly", type: "text", value: "#{@account.cleartext_password}"}/
+    %br/
+    - strength = PasswordStrength.test(@account.cleartext_username, @account.cleartext_password)
+    - if strength.status == :weak || strength.status == :invalid
+      =image_tag 'weak.png'
+      %strong= t 'password_strength.weak'
+    - elsif strength.status == :good
+      =image_tag 'good.png'
+      %strong= t 'password_strength.good'
+    - elsif strength.status == :strong
+      =image_tag 'strong.png'
+      %strong= t 'password_strength.strong'
     %button.btn.clip_button{"data-clipboard-target" => "#cleartext_password", title: "Click to copy"}
       %svg.icon-clippy
         %use{"xlink:href" => "#icon-clippy"}
   #hidden_password{style: "display:none"}
     = @account.cleartext_password
   %br/
-  - nice = PasswordStrength.test(@account.cleartext_username, @account.cleartext_password)
-  %p
-    %strong= "Password Strength: #{nice.status}"
   %p
     %strong= t '.last_change', time_ago: (time_ago_in_words @account.updated_at)
   %br/
