--- a/app/views/logins/show_update_password.html.haml
+++ b/app/views/logins/show_update_password.html.haml
@@ -18,3 +18,5 @@
       = t '.new_retype'
     = password_field_tag :new_password2, nil, class: 'form-control'
   = submit_tag I18n.t('logins.show_update_password.submit'), class: 'btn btn-primary'
+  #hidden_username{style: "display:none"}
+    = current_user.username
