--- a/app/views/admin/settings/_ip_whitelist.html.haml
+++ b/app/views/admin/settings/_ip_whitelist.html.haml
@@ -2,11 +2,11 @@
   = hidden_field_tag 'setting[general_ip_whitelist][]', ""
   = label_tag "Whitelisted ips"
   = select_tag 'setting[general_ip_whitelist]',
-      options_for_select(Setting::IpRange.whitelist_values),
+      options_for_select(Setting.value('general', 'ip_whitelist')),
       multiple: true,
       id: 'ip-whitelist',
       hidden: true,
-      'data-whitelist': Setting::IpRange.whitelist_values
+      'data-whitelist': Setting.value('general', 'ip_whitelist')
 
   .hint
     %p To specify a single ip address, just enter it like: <kbd>12.10.255.146</kbd>. IPv6 is also allowed.
