remove unused order column migration, remove getting setting by section via sql

--- a/app/views/admin/settings/_ldap.html.haml
+++ b/app/views/admin/settings/_ldap.html.haml
@@ -3,5 +3,5 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-- Setting.by_section(:ldap).each do |setting|
+- ldap_settings.each do |setting|
   = input_field_setting(setting)
