--- a/app/views/admin/settings/_general.html.haml
+++ b/app/views/admin/settings/_general.html.haml
@@ -3,5 +3,5 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-- Setting.by_section(:general).each do |setting|
+- general_settings.each do |setting|
   = input_field_setting(setting)
