fixed strongpassword images bug

--- a/app/assets/javascripts/modules/strongpassword.js.coffee.erb
+++ b/app/assets/javascripts/modules/strongpassword.js.coffee.erb
@@ -23,9 +23,9 @@ class app.Strongpassword
 
 
   showStrength = ->
-    $.strength.weakImage = "/assets/weak.png"
-    $.strength.goodImage = "/assets/good.png"
-    $.strength.strongImage = "/assets/strong.png"
+    $.strength.weakImage = "<%= asset_url('weak.png') %>"
+    $.strength.goodImage = "<%= asset_url('good.png') %>"
+    $.strength.strongImage = "<%= asset_url('strong.png') %>"
     $.strength "#hidden_username", "#new_password1", callback
     $.strength '#account_cleartext_username', '#account_cleartext_password', callback
 
