#24334 Change solution to handlebars

--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -14,6 +14,7 @@
   .form-group
     = f.label :password
     = f.password_field :cleartext_password, autocomplete: :off, class: 'form-control'
+    %div#strength
   .form-group
     = f.label :description
     %span#unencrypted
