--- a/app/views/logins/show_update_password.html.haml
+++ b/app/views/logins/show_update_password.html.haml
@@ -13,6 +13,7 @@
     %label{for: "new_password1"}
       = t '.new'
     = password_field_tag :new_password1, nil, class: 'form-control'
+    %div#strength
   .form-group
     %label{for: "new_password2"}
       = t '.new_retype'
