fix image_path for password strength js

--- a/app/assets/javascripts/modules/strongpassword.js.coffee.erb
+++ b/app/assets/javascripts/modules/strongpassword.js.coffee.erb
@@ -6,22 +6,28 @@
 app = window.App ||= {}
 
 class app.Strongpassword
+
+  IMAGE_PATH =
+    'weak': '<%= image_path("weak.png") %>'
+    'strong': '<%= image_path("strong.png") %>'
+    'good': '<%= image_path("good.png") %>'
+
   constructor: () ->
     bind.call()
 
-
   callback = (username, password, strength)->
+
     pw = $(password)[0]
     if pw.value.length > 0
       if strength.status == 'invalid'
         strength.status = 'weak'
+      strength.image_path = IMAGE_PATH[strength.status]
       content = HandlebarsTemplates['strong_password'](strength)
       $('#strength').html(content)
 
   removeStrength = (e) ->
     if e.target.value == ""
       $('#strength').empty()
-
 
   showStrength = ->
     $.strength "#hidden_username", "#new_password1", callback
