--- a/app/assets/javascripts/templates/strong_password.hbs.erb
+++ b/app/assets/javascripts/templates/strong_password.hbs.erb
@@ -1,2 +1,2 @@
-<img class='strength {{status}}' src='/assets/{{status}}.png'>
+<img class='strength {{status}}' src='{{ image_path }}'>
 <b id='strength_status'>{{status}}</b>
