--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -9,6 +9,7 @@
   %tr
     %th= t '.username'
     %th= t '.name'
+    %th= t '.last_login_at'
     %th= t '.ldap_uid'
     %th= t '.admin'
     %th{colspan: "3"}= t :actions
@@ -16,6 +17,9 @@
     %tr{class: "#{cycle( 'odd', 'even' )}"}
       %td= user.username
       %td= user.label
+      %td
+        - if user.last_login_at != nil
+          = format_local_time(user.last_login_at)
       %td= user.uid.to_s
       %td
         - if user != current_user
@@ -44,9 +48,8 @@
         %td.action_icon
           = link_to image_tag("unlock.svg"),  unlock_admin_user_path(user.id), title: t('.unlock')
 
-%div{id: "last_teammember_teams"}
+#last_teammember_teams
   = render partial: 'last_teammember_teams'
-
 
 
 :javascript
