--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -24,6 +24,7 @@
             = nav_link t(:change_password), show_update_password_login_path
           = nav_link image_tag("magnifying-glass.svg", class: "search-icon") + t('search.title'), search_path
         %ul.nav.navbar-nav.navbar-right.logout
+          = nav_link(t(:user_profile), user_profile_path)
           = nav_link('Logout', logout_login_path)
   - unless @breadcrumbs.nil?
     .bread-container
