--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -11,7 +11,7 @@
   - if @user.new_record?
     .form-group
       = f.label :password
-      = f.password_field :password, class: 'form-control'
+      = f.password_field :password, class: 'form-control generatable_password'
   .form-group
     = f.label :givenname
     = f.text_field :givenname, class: 'form-control'
