--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -13,12 +13,14 @@
     = f.text_field :cleartext_username, autocomplete: :off, class: 'form-control'
   .form-group
     = f.label :password
-    = f.password_field :cleartext_password, autocomplete: :off, class: 'form-control'
-    %div#strength
+    .form-inline
+      = f.password_field :cleartext_password, autocomplete: :off, id: 'account_password', class: 'form-control generatable_password'
+      = button_tag t('accounts.edit.random_password'), type: 'button', id: 'generate_button', class: 'btn btn-primary btn-sm'
+      %div#strength
   .form-group
     = f.label :description
     %span#unencrypted
-      (#{I18n.t('unencrypted_field_caption')})
+    (#{I18n.t('unencrypted_field_caption')})
     = f.text_area :description, class: 'form-control'
-  = f.submit @submit_button_text, class: 'btn btn-primary'
-  =link_to "Cancel", team_group_accounts_path(team_id: params[:team_id], id: params[:group_id] ), {:class=>"btn btn-primary"}
+    = f.submit @submit_button_text, class: 'btn btn-primary'
+    =link_to "Cancel", team_group_accounts_path(team_id: params[:team_id], id: params[:group_id] ), {:class=>"btn btn-primary"}
