fix strong params in LoginsController

--- a/app/views/logins/show_update_password.html.haml
+++ b/app/views/logins/show_update_password.html.haml
@@ -4,7 +4,7 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %h1 Change password
-= form_tag action: 'update_password', role: 'form' do
+= form_tag action: 'update_password' do
   .form-group
     %label{for: "old_password"}
       = t '.old'
