implemented keyboard shortcuts, refs #23858

--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -13,7 +13,7 @@
   %br/
   .result-username.select-click
     %input#cleartext_username.form-control{readonly: "readonly", type: "text", value: "#{@account.cleartext_username}"}/
-    %button.btn.clip_button{"data-clipboard-target" => "#cleartext_username", title: "Click to copy" }
+    %button.btn.clip_button{"data-clipboard-target" => "#cleartext_username", title: "copy username (ctrl + u)", id: "copy_username_button"}
       %svg.icon-clippy
         %use{"xlink:href" => "#icon-clippy"}
   %a.password-link{href: "#"}= t '.show_password'
@@ -30,7 +30,7 @@
     - elsif strength.status == :strong
       =image_tag 'strong.png'
       %strong= t 'password_strength.strong'
-    %button.btn.clip_button{"data-clipboard-target" => "#cleartext_password", title: "Click to copy"}
+    %button.btn.clip_button{"data-clipboard-target" => "#cleartext_password", title: "copy password (ctrl + c)", id: "copy_password_button"}
       %svg.icon-clippy
         %use{"xlink:href" => "#icon-clippy"}
   #hidden_password{style: "display:none"}
