--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -7,6 +7,8 @@
   .container
     .pull-left
       %a{href: "https://github.com/puzzle/cryptopus", target: "_blank"} Cryptopus
+      |
+      %a{href: "https://github.com/puzzle/cryptopus/wiki/User-manual", target: "_blank"} Help
     .pull-right
       %small
         = t :auto_logout
