--- a/app/views/logins/login.html.haml
+++ b/app/views/logins/login.html.haml
@@ -11,3 +11,4 @@
         = text_field_tag :username, params[:username], id: 'username', placeholder: t(:username), class: 'form-control'
         = password_field_tag :password, nil, id: 'password', placeholder: t(:password), class: 'form-control'
       = submit_tag t('.submit'), class: 'btn btn-primary'
+    = current_version
