--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -30,3 +30,10 @@
 .login-form .btn {
   width: 80%;
 }
+
+.version {
+  color: #E2E6E2;
+  text-align: right;
+  width: 320px;
+  margin: auto;  
+}
