--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -10,7 +10,7 @@
       |
       %a{href: "https://github.com/puzzle/cryptopus/wiki/User-manual", target: "_blank"} Help
       |
-      = "Version " +  current_version
+      = current_version
     .pull-right
       %small
         = t :auto_logout
