--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -8,7 +8,7 @@
     .pull-left
       %a{href: "https://github.com/puzzle/cryptopus", target: "_blank"} Cryptopus
       |
-      %a{href: "https://github.com/puzzle/cryptopus/wiki/User-manual", target: "_blank"} Help
+      %a{href: "https://github.com/puzzle/cryptopus/wiki/User-manual", target: "_blank"}= t('help')
       |
       = version_link
     .pull-right
