--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -9,6 +9,8 @@
       %a{href: "https://github.com/puzzle/cryptopus", target: "_blank"} Cryptopus
       |
       %a{href: "https://github.com/puzzle/cryptopus/wiki/User-manual", target: "_blank"} Help
+      |
+      = version_info
     .pull-right
       %small
         = t :auto_logout
