added success message and improved messages

--- a/app/views/layouts/_flashes.html.haml
+++ b/app/views/layouts/_flashes.html.haml
@@ -21,5 +21,11 @@
       %span{"aria-hidden" => "true"} &#215;
     = flash[:alert]
 
+- if flash[:success]
+  .alert.alert-success
+    %button.close{"aria-label" => "Close", "data-dismiss" => "alert", type: "button"}
+      %span{"aria-hidden" => "true"} &#215;
+    = flash[:success]
+
 - else
   .message_container{:id => 'message_container'}
