--- a/app/assets/javascripts/templates/alert_messages.hbs.erb
+++ b/app/assets/javascripts/templates/alert_messages.hbs.erb
@@ -1,4 +1,4 @@
-{{#each info}}
+{{#each infos}}
   <div class='alert alert-info' id='alert_js' role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
@@ -16,3 +16,11 @@
   </div>
 {{/each}}
 
+{{#each successes}}
+  <div class="alert alert-success">
+    <button aria-label="Close" class="close" data-dismiss="alert" type="button">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    <p class='flash_message' id='alert_message'> {{this}} </p>
+  </div>
+{{/each}}
