--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -8,14 +8,15 @@
   .form-group
     = f.label :username
     = f.text_field :username, autofocus: true, class: 'form-control'
-  - if @user.new_record?
+  - if @user.auth == 'db'  
+    - if @user.new_record?
+      .form-group
+        = f.label :password
+        = f.password_field :password, class: 'form-control generatable_password'
     .form-group
-      = f.label :password
-      = f.password_field :password, class: 'form-control generatable_password'
-  .form-group
-    = f.label :givenname
-    = f.text_field :givenname, class: 'form-control'
-  .form-group
-    = f.label :surname
-    = f.text_field :surname, class: 'form-control'
+      = f.label :givenname
+      = f.text_field :givenname, class: 'form-control'
+    .form-group
+      = f.label :surname
+      = f.text_field :surname, class: 'form-control'
   = f.submit @submit_button_text, class: 'btn btn-primary'
