--- a/app/views/logins/login.html.haml
+++ b/app/views/logins/login.html.haml
@@ -9,7 +9,7 @@
       = image_tag("cryptopussy.svg", class: 'logo')
       .form-group
         = text_field_tag :username, params[:username], id: 'username', placeholder: t(:username), class: 'form-control'
-        = password_field_tag :password, nil, id: 'password', placeholder: t(:password), class: 'form-control', 'data-content': 'Caps Lock is on'
+        = password_field_tag :password, nil, id: 'password', placeholder: t(:password), class: 'form-control'
       = submit_tag t('.submit'), class: 'btn btn-primary'
 .version-info
   = version_info
