--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -19,7 +19,7 @@
               </a>
               %ul.dropdown-menu
                 %li= nav_link t(:settings), admin_settings_path
-                - if current_user.admin?
+                - if policy(Recryptrequest).index?
                   %li= nav_link t(:recrypt_requests), admin_recryptrequests_path
                 %li= nav_link t(:users), admin_users_path
                 %li= nav_link t(:maintenance_tasks), admin_maintenance_tasks_path
