--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,3 +1,5 @@
+-# encoding: utf-8
+
 -#  Copyright (c) 2008-2017, Puzzle ITC GmbH. This file is part of
 -#  Cryptopus and licensed under the Affero General Public License version 3 or later.
 -#  See the COPYING file at the top-level directory or at
@@ -23,9 +25,9 @@
           = user.last_login_at.strftime('%d.%m.%Y, %H:%M')
       %td= user.last_login_from
       %td= user.ldap_uid.to_s
+
       %td
-        - if user != current_user
-          = change_admin_attribute(user)
+        = Admin::UserRole::Dropdown.new(user, current_user).render
       %td.action_icon
         - if user.auth != 'ldap'
           = link_to image_tag("edit.svg"), edit_admin_user_path(user)
@@ -33,7 +35,7 @@
         - if user != current_user
           = link_to image_tag("remove.svg"), '#',
             data: { last_teammember_teams_link: last_teammember_teams_teams_path(user_id: user.id),
-                    user_id: user.id},
+              user_id: user.id},
             class: 'delete_user_link'
 - if User.locked.count != 0
   %h1= t '.locked'
