--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -32,7 +32,7 @@
         - if user.auth != 'ldap'
           = link_to image_tag("edit.svg"), edit_admin_user_path(user)
       %td.action_icon
-        - if user != current_user
+        - if user != current_user && user.ldap_uid != 0
           = link_to image_tag("remove.svg"), '#',
             data: { last_teammember_teams_link: last_teammember_teams_teams_path(user_id: user.id),
               user_id: user.id},
