--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -10,8 +10,7 @@
   display: none;
 }
 
-#teamscreen,
-#reset_password_screen {
+#teamscreen {
   width: 600px;
   margin: 10% auto;
   padding: 10px 10px 70px 10px;
@@ -27,8 +26,7 @@
   overflow: auto;
 }
 
-#teamscreen_buttons,
-#reset_password_screen_buttons {
+#teamscreen_buttons {
   margin-top: 10px;
   border-top: 1px solid #cccccc;
 }
