--- a/app/views/admin/users/_reset_password.html.haml
+++ b/app/views/admin/users/_reset_password.html.haml
@@ -4,10 +4,7 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %div{id: "reset_password_screen"}
-  %div{class: "alert alert-danger reset-password", hidden: :true}
-    %p= I18n.t('admin.users.edit.warning')
-  
-  %div{id: "reset_password_screen_buttons"}
-    %button#reset_password_cancel_button.btn.btn-primary.pull-right Cancel
-    %button#reset_password_submit_button.btn.btn-primary.pull-right
-      = I18n.t('admin.users.edit.reset_password')
+  %p= I18n.t('admin.users.edit.warning')
+  %button#reset_password_cancel_button.btn.btn-secondary.pull-right Cancel
+  %button#reset_password_submit_button.btn.btn-secondary.pull-right
+    = I18n.t('admin.users.edit.reset_password')
