--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,4 +1,5 @@
-#last_teammember_teams {
+#last_teammember_teams,
+#reset_password_popup {
   position: fixed;
   top: 0;
   left: 0;
@@ -31,7 +32,9 @@
 }
 
 #last_teammember_teams_cancel_button,
-#delete_user_button {
+#delete_user_button,
+#reset_password_cancel_button,
+#reset_password_submit_button {
   margin: 15px 0 0 5px;
 }
 
