test ldap connection button, refs #25550 (#78)

--- a/app/views/admin/settings/_ldap.html.haml
+++ b/app/views/admin/settings/_ldap.html.haml
@@ -5,3 +5,5 @@
 
 - ldap_settings.each do |setting|
   = input_field_setting(setting)
+- if Setting.value(:ldap, 'enable')
+  = button_tag t('admin.settings.index.ldap'), type: 'button', id: 'ldap-button', class: 'btn btn-primary'
