rename admin/teamlist to admin/teams, remove unnecessary ajax call

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -22,7 +22,7 @@
                 - if policy(Recryptrequest).index?
                   %li= nav_link t(:recrypt_requests), admin_recryptrequests_path
                 %li= nav_link t(:users), admin_users_path
-                %li= nav_link t(:teamlist), admin_teamlist_path
+                %li= nav_link t('teams.title'), admin_teams_path
                 %li= nav_link t(:maintenance_tasks), admin_maintenance_tasks_path
           - if current_user.auth_db?
             = nav_link t(:change_password), show_update_password_login_path
