--- a/app/views/admin/teams/index.html.haml
+++ b/app/views/admin/teams/index.html.haml
@@ -21,4 +21,6 @@
         %td= image_tag( "members.svg" ) + ' ' + team.name
       %td= number_of_groups
       %td= number_of_accounts
-      %td= teammember_list + members_button 
+      %td
+        %ul.members-list
+        =link_to('Show', '#', class: 'members-link')
