--- a/app/assets/javascripts/templates/search/accounts_result_entries.hbs.erb
+++ b/app/assets/javascripts/templates/search/accounts_result_entries.hbs.erb
@@ -6,7 +6,7 @@ https://github.com/puzzle/cryptopus. }}
 {{#each .}}
   <div class"result-entry">
     <li class="result-small account-entry"
-      data-account-path="/api/teams/{{team_id}}/groups/{{group_id}}/accounts/{{id}}">
+      data-account-path="/api/accounts/{{id}}">
       <div class="result-description">
         <%= image_tag("key.svg", class:"result-type-icon", alt:"Account" ) %>
         <h4 class="result-title-small account-link">{{accountname}}</h4>
