Profile page: renew, delete, new actions etc

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -6,3 +6,13 @@
 #profile-tabs {
   padding-top: 3em;
 }
+.api-user-description {
+  width: 200px;
+}
+.api-user-description:hover {
+  background: #fffbe1;
+  width: 200px;
+}
+#valid_for_dropdown {
+  width: 120px;
+}
