--- a/app/views/profile/_api_users.html.haml
+++ b/app/views/profile/_api_users.html.haml
@@ -4,6 +4,7 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %h1#api_users_title= t '.api_users'
+= button_tag t('new'), type: 'button', id: 'create_api_user_button', class: 'btn btn-primary pull-right'
 %table.table.table-striped#api_users_table
   %tr
     %th= t '.username'
