--- a/app/assets/javascripts/templates/api_users.hbs.erb
+++ b/app/assets/javascripts/templates/api_users.hbs.erb
@@ -28,7 +28,17 @@
     </td>
     <td> {{last_login_at}} </td>
     <td> {{last_login_from}} </td>
-    <td> <a href='#'><img src='../assets/renew.svg' id='renew-user'></a> </td>
-    <td> <a href='#'><img src='../assets/remove.svg' id='remove-user'></a> </td>
+    <td>
+      <div id='active-api-user'
+        {{#if locked}}
+          class='toggle-button toggle-button-selected'
+        {{else}}
+          class='toggle-button'
+        {{/if}}
+        ><button></button>
+      </div>
+    </td>
+    <td> <a href='#'><img src='../assets/refresh.svg' id='renew-user'></a>
+    <a href='#'><img src='../assets/remove.svg' id='remove-user'></a> </td>
 </tr>
 {{/each}}
