--- a/app/assets/javascripts/templates/api_users.hbs.erb
+++ b/app/assets/javascripts/templates/api_users.hbs.erb
@@ -38,7 +38,9 @@
         ><button></button>
       </div>
     </td>
-    <td> <a href='#'><img src='../assets/refresh.svg' id='renew-user'></a>
-    <a href='#'><img src='../assets/remove.svg' id='remove-user'></a> </td>
+    <td>
+      <a href='#'><img src='../assets/refresh.svg' id='renew-user' class='action-icons'></a>
+      <a href='#'><img src='../assets/remove.svg' id='remove-user' class='action-icons'></a>
+    </td>
 </tr>
 {{/each}}
