--- a/app/views/profile/_api_users.html.haml
+++ b/app/views/profile/_api_users.html.haml
@@ -5,6 +5,8 @@
 
 %h1#api_users_title= t '.api_users'
 = button_tag t('new'), type: 'button', id: 'create_api_user_button', class: 'btn btn-primary pull-right'
+%div{id: 'no_api_users', hidden: true}
+  %p= t '.no_api_users'
 %table.table.table-striped#api_users_table
   %tr
     %th= t '.username'
