Update Timestamp after reneval

--- a/app/assets/javascripts/templates/api_users.hbs.erb
+++ b/app/assets/javascripts/templates/api_users.hbs.erb
@@ -10,7 +10,11 @@
         {{/if}}
       </div>
     </td>
-    <td> {{valid_until}} </td>
+    <td>
+      <div id=valid_until>
+        {{valid_until}}
+      </div>
+    </td>
     <td>
      <div class='dropdown'>
      <button class='btn btn-default dropdown-toggle' data-toggle='dropdown' id='valid_for_dropdown'>
