profile page: Styled & fixed. Translations for (almost) everything and much more

--- a/app/assets/javascripts/templates/api_users.hbs.erb
+++ b/app/assets/javascripts/templates/api_users.hbs.erb
@@ -43,8 +43,8 @@
       </div>
     </td>
     <td>
-      <a href='#'><img src='../assets/refresh.svg' id='renew-user' class='action-icons'></a>
-      <a href='#'><img src='../assets/remove.svg' id='remove-user' class='action-icons'></a>
+      <a href='#'><img src=<%= image_path("refresh.svg") %> id='renew-user' class='action-icons'></a>
+      <a href='#'><img src=<%= image_path("remove.svg") %> id='remove-user' class='action-icons'></a>
     </td>
 </tr>
 {{/each}}
