--- a/app/assets/javascripts/templates/api_users.hbs.erb
+++ b/app/assets/javascripts/templates/api_users.hbs.erb
@@ -1,50 +1,3 @@
 {{#each api_users}}
-<tr class="{% cycle 'odd' 'even' %} api-user-row" id={{id}}>
-    <td> {{username}} </td>
-    <td>
-    <div class=api-user-description>
-        {{#if description}}
-          {{description}}
-        {{else}}
-          <i>click to enter description..</i>
-        {{/if}}
-      </div>
-    </td>
-    <td>
-      <div id=valid_until>
-        {{valid_until}}
-      </div>
-    </td>
-    <td>
-     <div class='dropdown'>
-     <button class='btn btn-default dropdown-toggle' data-toggle='dropdown' id='valid_for_dropdown'>
-      <span>{{valid_text}}</span>
-      <span class='caret'></span>
-      </button>
-      <ul class='dropdown-menu' aria-labelledby='valid_for_dropdown'>
-        {{#each ../options}}
-          <li class='dropdown-item' id='dropdown_valid_for' val={{value}}>
-            <a href='#'>{{name}}</a>
-          </li>
-        {{/each}}
-      </ul>
-      </div>
-    </td>
-    <td> {{last_login_at}} </td>
-    <td> {{last_login_from}} </td>
-    <td>
-      <div id='active-api-user'
-        {{#if locked}}
-          class='toggle-button toggle-button-selected'
-        {{else}}
-          class='toggle-button'
-        {{/if}}
-        ><button></button>
-      </div>
-    </td>
-    <td>
-      <a href='#'><img src=<%= image_path("refresh.svg") %> id='renew-user' class='action-icons'></a>
-      <a href='#'><img src=<%= image_path("remove.svg") %> id='remove-user' class='action-icons'></a>
-    </td>
-</tr>
+  {{> _api_user_row}}
 {{/each}}
