--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
     %title Cryptopus
     = stylesheet_link_tag :application, media: "all"
     = javascript_include_tag :application
-  %body
+  %body{"data-locale" => I18n.locale}
     = render 'layouts/icons'
     .container.main{role: "main"}
       = render 'layouts/navigation'
